# 42_Seoul

./: README.md
BORN2BEROOT/: README.md
CUB3D/: README.md
CUB3D/src/utils/: ft_calloc.c
DJANGO-PISCINE/: .gitignore  README.md
DJANGO-PISCINE/day00/ex00/: myawesomescript.sh
DJANGO-PISCINE/day00/ex01/: cv.html
DJANGO-PISCINE/day00/ex02/: form.html
DJANGO-PISCINE/day00/ex03/: copy.html
DJANGO-PISCINE/day00/ex04/: snippets.html
DJANGO-PISCINE/day00/ex05/: index.html
DJANGO-PISCINE/day01/ex00/: var.py
DJANGO-PISCINE/day01/ex01/: numbers.py
DJANGO-PISCINE/day01/ex02/: var_to_dict.py
DJANGO-PISCINE/day01/ex03/: capital_city.py
DJANGO-PISCINE/day01/ex04/: state.py
DJANGO-PISCINE/day01/ex05/: all_in.py
DJANGO-PISCINE/day04/: my_script.sh
DJANGO-PISCINE/day08/: requirement.txt
DJANGO-PISCINE/day08/day08/: MANIFEST.in  setup.cfg
DJANGO-PISCINE/day08/day08/d08/: apps.py  forms.py  models.py  urls.py  views.py
DJANGO-PISCINE/day08/day08/d08/templates/: index.html
DJANGO-PISCINE/day08/day08/day08/: settings.py  urls.py
DJANGO-PISCINE/rush00/: my_script.sh  requirement.txt
FT_PRINTF/: README.md
GET_NEXT_LINE/: README.md
LIBFT/: README.md
MINISHELL/: Makefile  README.md
MINISHELL/include/: utils.h
MINISHELL/src/: main.c
NETWHAT/: README.md
PHILOSOPHER/: README.md
PHILOSOPHER/philo/: Makefile
PHILOSOPHER/philo_bonus/: Makefile
PIPEX/: README.md
PUSH_SWAP/: README.md
SO_LONG/: README.md
SO_LONG/include/: so_long.h
SO_LONG/src/: so_long.c  so_long_move.c  so_long_utils.c  validate_file.c  validate_map.c
(+137 files in other folders)
